# ado

./: .codecov.yml  .dockerignore  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .testcoverage.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  goreleaser.Dockerfile  mkdocs.yml  release-please-config.json
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr_proposal.md  bug_report.md  command_proposal.md  feature_proposal.md  feature_request.md  question.md
.github/workflows/: benchmark.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  goreleaser.yml  release-please.yml
cmd/ado/: main.go
docs/: 01-project-structure.md  02-commands.md  DEMO_SCRIPT_30MIN.md  RELEASE.md  architecture.md  code-ownership.md  contributing.md  index.md  installation.md  make.md  quickstart.md  release.md  workflow.md
docs/adr/: 0001-development-workflow.md  0002-structured-logging.md  0003-recipe-based-documentation.md  0004-code-ownership-system.md  0005-pr-metrics-dashboard.md  README.md  TEMPLATE.md
docs/analysis/: 01-cross-platform-system-info.md  02-implementation-examples.md  03-implementation-summary.md  QUICK_REFERENCE.md  README.md
docs/commands/: 01-echo.md  02-help.md  03-meta.md  (+3 more)
lab/py/: pyproject.toml  requirements.txt
lab/py/ado_cli/: __init__.py  cli.py  config.py  meta.py  output.py
lab/py/tests/: test_cli.py
make/: common.mk  docker.mk  docs.mk  go.mk  help.mk  hooks.mk  python.mk
(+60 files in other folders)
